Remove spurious angle bracket

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <section class="job">
           <h1>Half Tree Labs / <span class="position">Co-founder</span></h1>
-          <h2>2012 - 2015, Buffalo, NY></h2>
+          <h2>2012 - 2015, Buffalo, NY</h2>
 
           <ul>
             <li>Created Confabulous, a real-time, text-based chat platform for the Web, using Scala, Akka, Play, Dart, Angular, Cassandra and Docker.</li>
